gvb_interp/src/snapshots/gvb_interp__vm__tests__expr__sys_func__len.snap
---
source: gvb_interp/src/vm.rs
expression: "run(r#\"\n10 print len(\"abcd\"); len(\"A和B 从\"); len(\"\");\n    \"#.trim(),\n    vec![(ExecResult :: End, None)])"

---
print "4"
print "9"
print "0"
flush

